--- a/tasks/settings.yml
+++ b/tasks/settings.yml
@@ -33,9 +33,17 @@
   file:
     path: "{{ jenkins_home }}"
     state: directory
-    owner: jenkins
-    group: jenkins
+    owner: "{{ jenkins_process_user }}"
+    group: "{{ jenkins_process_group }}"
     mode: u+rwx
+
+- name: Set the Jenkins system user
+  lineinfile:
+    dest: "{{ jenkins_init_file }}"
+    regexp: '^JENKINS_USER=.*'
+    line: 'JENKINS_USER={{ jenkins_process_user }}'
+    state: present
+    register: jenkins_user_config
 
 - name: Create custom init scripts directory.
   file:
@@ -52,4 +60,5 @@
   service: name=jenkins state=restarted
   when: (jenkins_users_config is defined and jenkins_users_config.changed) or
         (jenkins_http_config is defined and jenkins_http_config.changed) or
-        (jenkins_home_config is defined and jenkins_home_config.changed)
+        (jenkins_home_config is defined and jenkins_home_config.changed) or
+        (jenkins_user_config is defined and jenkins_user_config.changed)
